--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lichess Data Analysis Project"
+    "# Proyecto de Análisis de Datos de Lichess"
    ]
   },
   {
